@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1996, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1996, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -62,7 +62,6 @@ import java.util.concurrent.ConcurrentMap;
 import java.util.jar.JarEntry;
 import java.util.spi.ResourceBundleControlProvider;
 import java.util.spi.ResourceBundleProvider;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import jdk.internal.loader.BootLoader;
@@ -73,6 +72,8 @@ import jdk.internal.reflect.Reflection;
 import sun.security.action.GetPropertyAction;
 import sun.util.locale.BaseLocale;
 import sun.util.locale.LocaleObjectCache;
+import sun.util.resources.Bundles;
+
 import static sun.security.util.SecurityConstants.GET_CLASSLOADER_PERMISSION;
 
 
@@ -124,20 +125,17 @@ import static sun.security.util.SecurityConstants.GET_CLASSLOADER_PERMISSION;
  * the {@code ResourceBundle} class using the
  * {@link #getBundle(java.lang.String, java.util.Locale) getBundle}
  * method:
- * <blockquote>
- * <pre>
+ * {@snippet lang=java :
  * ResourceBundle myResources =
  *      ResourceBundle.getBundle("MyResources", currentLocale);
- * </pre>
- * </blockquote>
+ * }
  *
  * <P>
  * Resource bundles contain key/value pairs. The keys uniquely
  * identify a locale-specific object in the bundle. Here's an
  * example of a {@code ListResourceBundle} that contains
  * two key/value pairs:
- * <blockquote>
- * <pre>
+ * {@snippet lang=java :
  * public class MyResources extends ListResourceBundle {
  *     protected Object[][] getContents() {
  *         return new Object[][] {
@@ -148,8 +146,7 @@ import static sun.security.util.SecurityConstants.GET_CLASSLOADER_PERMISSION;
  *        };
  *     }
  * }
- * </pre>
- * </blockquote>
+ * }
  * Keys are always {@code String}s.
  * In this example, the keys are "OkKey" and "CancelKey".
  * In the above example, the values
@@ -160,12 +157,10 @@ import static sun.security.util.SecurityConstants.GET_CLASSLOADER_PERMISSION;
  * You retrieve an object from resource bundle using the appropriate
  * getter method. Because "OkKey" and "CancelKey"
  * are both strings, you would use {@code getString} to retrieve them:
- * <blockquote>
- * <pre>
+ * {@snippet lang=java :
  * button1 = new Button(myResources.getString("OkKey"));
  * button2 = new Button(myResources.getString("CancelKey"));
- * </pre>
- * </blockquote>
+ * }
  * The getter methods all require the key as an argument and return
  * the object if found. If the object is not found, the getter method
  * throws a {@code MissingResourceException}.
@@ -176,11 +171,9 @@ import static sun.security.util.SecurityConstants.GET_CLASSLOADER_PERMISSION;
  * as well as a generic {@code getObject} method for any other
  * type of object. When using {@code getObject}, you'll
  * have to cast the result to the appropriate type. For example:
- * <blockquote>
- * <pre>
+ * {@snippet lang=java :
  * int[] myIntegers = (int[]) myResources.getObject("intList");
- * </pre>
- * </blockquote>
+ * }
  *
  * <P>
  * The Java Platform provides two subclasses of {@code ResourceBundle},
@@ -250,18 +243,23 @@ import static sun.security.util.SecurityConstants.GET_CLASSLOADER_PERMISSION;
  * Only non-encapsulated resource bundles of "{@code java.class}"
  * or "{@code java.properties}" format are searched.
  *
- * <p>If the caller module is a
- * <a href="{@docRoot}/java.base/java/util/spi/ResourceBundleProvider.html#obtain-resource-bundle">
- * resource bundle provider</a>, it does not fall back to the
- * class loader search.
+ * <p>If the caller module is a {@linkplain
+ * ResourceBundleProvider##obtain-resource-bundle resource bundle
+ * provider}, it does not fall back to the class loader search.
+ *
+ * <p>
+ * In cases where the {@code getBundle} factory method is called from a context
+ * where there is no caller frame on the stack (e.g. when called directly from
+ * a JNI attached thread), the caller module is default to the unnamed module for the
+ * {@linkplain ClassLoader#getSystemClassLoader system class loader}.
  *
  * <h3>Resource bundles in automatic modules</h3>
  *
  * A common format of resource bundles is in {@linkplain PropertyResourceBundle
  * .properties} file format.  Typically {@code .properties} resource bundles
  * are packaged in a JAR file.  Resource bundle only JAR file can be readily
- * deployed as an <a href="{@docRoot}/java.base/java/lang/module/ModuleFinder.html#automatic-modules">
- * automatic module</a>.  For example, if the JAR file contains the
+ * deployed as an {@linkplain java.lang.module.ModuleFinder##automatic-modules
+ * automatic module}.  For example, if the JAR file contains the
  * entry "{@code p/q/Foo_ja.properties}" and no {@code .class} entry,
  * when resolved and defined as an automatic module, no package is derived
  * for this module.  This allows resource bundles in {@code .properties}
@@ -324,24 +322,27 @@ import static sun.security.util.SecurityConstants.GET_CLASSLOADER_PERMISSION;
  * Notice that you don't need to supply a value if
  * a "parent-level" {@code ResourceBundle} handles the same
  * key with the same value (as for the okKey below).
- * <blockquote>
- * <pre>
+ * {@snippet lang=java :
  * // default (English language, United States)
  * public class MyResources extends ResourceBundle {
  *     public Object handleGetObject(String key) {
- *         if (key.equals("okKey")) return "Ok";
- *         if (key.equals("cancelKey")) return "Cancel";
+ *         if (key.equals("okKey")) {
+ *            return "Ok";
+ *         }
+ *         if (key.equals("cancelKey")) {
+ *            return "Cancel";
+ *         }
  *         return null;
  *     }
  *
- *     public Enumeration&lt;String&gt; getKeys() {
+ *     public Enumeration<String> getKeys() {
  *         return Collections.enumeration(keySet());
  *     }
  *
  *     // Overrides handleKeySet() so that the getKeys() implementation
  *     // can rely on the keySet() value.
- *     protected Set&lt;String&gt; handleKeySet() {
- *         return new HashSet&lt;String&gt;(Arrays.asList("okKey", "cancelKey"));
+ *     protected Set<String> handleKeySet() {
+ *         return new HashSet<String>(Arrays.asList("okKey", "cancelKey"));
  *     }
  * }
  *
@@ -349,16 +350,17 @@ import static sun.security.util.SecurityConstants.GET_CLASSLOADER_PERMISSION;
  * public class MyResources_de extends MyResources {
  *     public Object handleGetObject(String key) {
  *         // don't need okKey, since parent level handles it.
- *         if (key.equals("cancelKey")) return "Abbrechen";
+ *         if (key.equals("cancelKey")) {
+ *            return "Abbrechen";
+ *         }
  *         return null;
  *     }
  *
- *     protected Set&lt;String&gt; handleKeySet() {
- *         return new HashSet&lt;String&gt;(Arrays.asList("cancelKey"));
+ *     protected Set<String> handleKeySet() {
+ *         return new HashSet<String>(Arrays.asList("cancelKey"));
  *     }
  * }
- * </pre>
- * </blockquote>
+ * }
  * You do not have to restrict yourself to using a single family of
  * {@code ResourceBundle}s. For example, you could have a set of bundles for
  * exception messages, {@code ExceptionResources}
@@ -371,7 +373,6 @@ import static sun.security.util.SecurityConstants.GET_CLASSLOADER_PERMISSION;
  * @see MissingResourceException
  * @see ResourceBundleProvider
  * @since 1.1
- * @revised 9
  */
 public abstract class ResourceBundle {
 
@@ -506,9 +507,10 @@ public abstract class ResourceBundle {
     /**
      * Gets a string for the given key from this resource bundle or one of its parents.
      * Calling this method is equivalent to calling
-     * <blockquote>
-     * <code>(String) {@link #getObject(java.lang.String) getObject}(key)</code>.
-     * </blockquote>
+     * {@snippet lang=java :
+     *     // @link substring="getObject" target="#getObject(java.lang.String)"
+     *     (String[]) getObject(key);
+     * }
      *
      * @param key the key for the desired string
      * @throws    NullPointerException if {@code key} is {@code null}
@@ -523,9 +525,10 @@ public abstract class ResourceBundle {
     /**
      * Gets a string array for the given key from this resource bundle or one of its parents.
      * Calling this method is equivalent to calling
-     * <blockquote>
-     * <code>(String[]) {@link #getObject(java.lang.String) getObject}(key)</code>.
-     * </blockquote>
+     * {@snippet lang=java :
+     *     // @link substring="getObject" target="#getObject(java.lang.String)"
+     *     (String[]) getObject(key);
+     * }
      *
      * @param key the key for the desired string array
      * @throws    NullPointerException if {@code key} is {@code null}
@@ -578,6 +581,7 @@ public abstract class ResourceBundle {
         return locale;
     }
 
+    @SuppressWarnings("removal")
     private static ClassLoader getLoader(Module module) {
         PrivilegedAction<ClassLoader> pa = module::getClassLoader;
         return AccessController.doPrivileged(pa);
@@ -714,8 +718,7 @@ public abstract class ResourceBundle {
             if (this == other) {
                 return true;
             }
-            try {
-                final CacheKey otherEntry = (CacheKey)other;
+            if (other instanceof CacheKey otherEntry) {
                 //quick check to see if they are not equal
                 if (modulesHash != otherEntry.modulesHash) {
                     return false;
@@ -733,7 +736,6 @@ public abstract class ResourceBundle {
                 Module caller = getCallerModule();
                 return ((module != null) && (module.equals(otherEntry.getModule())) &&
                         (caller != null) && (caller.equals(otherEntry.getCallerModule())));
-            } catch (NullPointerException | ClassCastException e) {
             }
             return false;
         }
@@ -835,9 +837,9 @@ public abstract class ResourceBundle {
     /**
      * Gets a resource bundle using the specified base name, the default locale,
      * and the caller module. Calling this method is equivalent to calling
-     * <blockquote>
-     * {@code getBundle(baseName, Locale.getDefault(), callerModule)},
-     * </blockquote>
+     * {@snippet lang=java :
+     *     getBundle(baseName, Locale.getDefault(), callerModule);
+     * }
      *
      * @param baseName the base name of the resource bundle, a fully qualified class name
      * @throws    java.lang.NullPointerException
@@ -861,10 +863,10 @@ public abstract class ResourceBundle {
      * Returns a resource bundle using the specified base name, the
      * default locale and the specified control. Calling this method
      * is equivalent to calling
-     * <pre>
+     * {@snippet lang=java :
      * getBundle(baseName, Locale.getDefault(),
-     *           this.getClass().getClassLoader(), control),
-     * </pre>
+     *           this.getClass().getClassLoader(), control);
+     * }
      * except that {@code getClassLoader()} is run with the security
      * privileges of {@code ResourceBundle}.  See {@link
      * #getBundle(String, Locale, ClassLoader, Control) getBundle} for the
@@ -891,7 +893,6 @@ public abstract class ResourceBundle {
      * @throws UnsupportedOperationException
      *         if this method is called in a named module
      * @since 1.6
-     * @revised 9
      */
     @CallerSensitive
     public static final ResourceBundle getBundle(String baseName,
@@ -905,9 +906,9 @@ public abstract class ResourceBundle {
     /**
      * Gets a resource bundle using the specified base name and locale,
      * and the caller module. Calling this method is equivalent to calling
-     * <blockquote>
-     * {@code getBundle(baseName, locale, callerModule)},
-     * </blockquote>
+     * {@snippet lang=java :
+     *     getBundle(baseName, locale, callerModule);
+     * }
      *
      * @param baseName
      *        the base name of the resource bundle, a fully qualified class name
@@ -934,9 +935,9 @@ public abstract class ResourceBundle {
     /**
      * Gets a resource bundle using the specified base name and the default locale
      * on behalf of the specified module. This method is equivalent to calling
-     * <blockquote>
-     * {@code getBundle(baseName, Locale.getDefault(), module)}
-     * </blockquote>
+     * {@snippet lang=java :
+     *     getBundle(baseName, Locale.getDefault(), module);
+     * }
      *
      * @param baseName the base name of the resource bundle,
      *                 a fully qualified class name
@@ -1017,10 +1018,10 @@ public abstract class ResourceBundle {
      * Returns a resource bundle using the specified base name, target
      * locale and control, and the caller's class loader. Calling this
      * method is equivalent to calling
-     * <pre>
+     * {@snippet lang=java :
      * getBundle(baseName, targetLocale, this.getClass().getClassLoader(),
-     *           control),
-     * </pre>
+     *           control);
+     * }
      * except that {@code getClassLoader()} is run with the security
      * privileges of {@code ResourceBundle}.  See {@link
      * #getBundle(String, Locale, ClassLoader, Control) getBundle} for the
@@ -1051,7 +1052,6 @@ public abstract class ResourceBundle {
      * @throws UnsupportedOperationException
      *         if this method is called in a named module
      * @since 1.6
-     * @revised 9
      */
     @CallerSensitive
     public static final ResourceBundle getBundle(String baseName, Locale targetLocale,
@@ -1068,14 +1068,14 @@ public abstract class ResourceBundle {
      * <p>When this method is called from a named module and the given
      * loader is the class loader of the caller module, this is equivalent
      * to calling:
-     * <blockquote><pre>
-     * getBundle(baseName, targetLocale, callerModule)
-     * </pre></blockquote>
+     * {@snippet lang=java :
+     *     getBundle(baseName, targetLocale, callerModule);
+     * }
      *
      * otherwise, this is equivalent to calling:
-     * <blockquote><pre>
-     * getBundle(baseName, targetLocale, loader, control)
-     * </pre></blockquote>
+     * {@snippet lang=java :
+     *     getBundle(baseName, targetLocale, loader, control);
+     * }
      * where {@code control} is the default instance of {@link Control} unless
      * a {@code Control} instance is provided by
      * {@link ResourceBundleControlProvider} SPI.  Refer to the
@@ -1264,7 +1264,6 @@ public abstract class ResourceBundle {
      * @throws    MissingResourceException
      *        if no resource bundle for the specified base name can be found
      * @since 1.2
-     * @revised 9
      * @see <a href="#resource-bundle-modules">Resource Bundles and Named Modules</a>
      */
     @CallerSensitive
@@ -1489,7 +1488,6 @@ public abstract class ResourceBundle {
      * @throws UnsupportedOperationException
      *         if this method is called in a named module
      * @since 1.6
-     * @revised 9
      */
     @CallerSensitive
     public static ResourceBundle getBundle(String baseName, Locale targetLocale,
@@ -1503,7 +1501,8 @@ public abstract class ResourceBundle {
     }
 
     private static Control getDefaultControl(Class<?> caller, String baseName) {
-        return getDefaultControl(caller.getModule(), baseName);
+        Module callerModule = getCallerModule(caller);
+        return getDefaultControl(callerModule, baseName);
     }
 
     private static Control getDefaultControl(Module targetModule, String baseName) {
@@ -1514,14 +1513,12 @@ public abstract class ResourceBundle {
 
     private static class ResourceBundleControlProviderHolder {
         private static final PrivilegedAction<List<ResourceBundleControlProvider>> pa =
-            () -> {
-                return Collections.unmodifiableList(
-                    ServiceLoader.load(ResourceBundleControlProvider.class,
-                                       ClassLoader.getSystemClassLoader()).stream()
-                        .map(ServiceLoader.Provider::get)
-                        .collect(Collectors.toList()));
-            };
+            () -> ServiceLoader.load(ResourceBundleControlProvider.class,
+                                   ClassLoader.getSystemClassLoader()).stream()
+                             .map(ServiceLoader.Provider::get)
+                             .toList();
 
+        @SuppressWarnings("removal")
         private static final List<ResourceBundleControlProvider> CONTROL_PROVIDERS =
             AccessController.doPrivileged(pa);
 
@@ -1536,7 +1533,8 @@ public abstract class ResourceBundle {
     }
 
     private static void checkNamedModule(Class<?> caller) {
-        if (caller.getModule().isNamed()) {
+        Module callerModule = getCallerModule(caller);
+        if (callerModule.isNamed()) {
             throw new UnsupportedOperationException(
                     "ResourceBundle.Control not supported in named modules");
         }
@@ -1546,7 +1544,19 @@ public abstract class ResourceBundle {
                                                 Locale locale,
                                                 Class<?> caller,
                                                 Control control) {
-        return getBundleImpl(baseName, locale, caller, caller.getClassLoader(), control);
+        ClassLoader loader = getLoader(getCallerModule(caller));
+        return getBundleImpl(baseName, locale, caller, loader, control);
+    }
+
+    /*
+     * Determine the module to be used for the caller.  If
+     * Reflection::getCallerClass is called from JNI with an empty
+     * stack frame the caller will be null, so the system class loader unnamed
+     * module will be used.
+     */
+    private static Module getCallerModule(Class<?> caller) {
+        return  (caller != null) ? caller.getModule()
+                : ClassLoader.getSystemClassLoader().getUnnamedModule();
     }
 
     /**
@@ -1565,10 +1575,7 @@ public abstract class ResourceBundle {
                                                 Class<?> caller,
                                                 ClassLoader loader,
                                                 Control control) {
-        if (caller == null) {
-            throw new InternalError("null caller");
-        }
-        Module callerModule = caller.getModule();
+        Module callerModule = getCallerModule(caller);
 
         // get resource bundles for a named module only if loader is the module's class loader
         if (callerModule.isNamed() && loader == getLoader(callerModule)) {
@@ -1592,8 +1599,9 @@ public abstract class ResourceBundle {
                                                       Locale locale,
                                                       Control control) {
         Objects.requireNonNull(module);
-        Module callerModule = caller.getModule();
+        Module callerModule = getCallerModule(caller);
         if (callerModule != module) {
+            @SuppressWarnings("removal")
             SecurityManager sm = System.getSecurityManager();
             if (sm != null) {
                 sm.checkPermission(GET_CLASSLOADER_PERMISSION);
@@ -1831,19 +1839,13 @@ public abstract class ResourceBundle {
         if (bundle == null && !cacheKey.callerHasProvider()) {
             for (String format : formats) {
                 try {
-                    switch (format) {
-                    case "java.class":
-                        bundle = ResourceBundleProviderHelper
-                            .loadResourceBundle(callerModule, module, baseName, targetLocale);
-
-                        break;
-                    case "java.properties":
-                        bundle = ResourceBundleProviderHelper
-                            .loadPropertyResourceBundle(callerModule, module, baseName, targetLocale);
-                        break;
-                    default:
-                        throw new InternalError("unexpected format: " + format);
-                    }
+                    bundle = switch (format) {
+                      case "java.class" -> ResourceBundleProviderHelper
+                          .loadResourceBundle(callerModule, module, baseName, targetLocale);
+                      case "java.properties" -> ResourceBundleProviderHelper
+                          .loadPropertyResourceBundle(callerModule, module, baseName, targetLocale);
+                      default -> throw new InternalError("unexpected format: " + format);
+                    };
 
                     if (bundle != null) {
                         cacheKey.setFormat(format);
@@ -1889,6 +1891,7 @@ public abstract class ResourceBundle {
      * Returns the service type of the given baseName that is visible
      * to the given class loader
      */
+    @SuppressWarnings("removal")
     private static Class<ResourceBundleProvider>
             getResourceBundleProviderType(String baseName, ClassLoader loader)
     {
@@ -1923,6 +1926,7 @@ public abstract class ResourceBundle {
     /**
      * Loads ResourceBundle from service providers.
      */
+    @SuppressWarnings("removal")
     private static ResourceBundle loadBundleFromProviders(String baseName,
                                                           Locale locale,
                                                           ServiceLoader<ResourceBundleProvider> providers,
@@ -2226,14 +2230,13 @@ public abstract class ResourceBundle {
      * by the caller's module.
      *
      * @since 1.6
-     * @revised 9
      * @see ResourceBundle.Control#getTimeToLive(String,Locale)
      */
     @CallerSensitive
     public static final void clearCache() {
-        Class<?> caller = Reflection.getCallerClass();
+        Module callerModule = getCallerModule(Reflection.getCallerClass());
         cacheList.keySet().removeIf(
-            key -> key.getCallerModule() == caller.getModule()
+            key -> key.getCallerModule() == callerModule
         );
     }
 
@@ -2419,14 +2422,14 @@ public abstract class ResourceBundle {
      * <p>The following code lets {@code ResourceBundle.getBundle} look
      * up only properties-based resources.
      *
-     * <pre>
+     * {@snippet lang=java :
      * import java.util.*;
      * import static java.util.ResourceBundle.Control.*;
-     * ...
+     * code: // @replace substring="code:" replacement="..."
      * ResourceBundle bundle =
-     *   ResourceBundle.getBundle("MyResources", new Locale("fr", "CH"),
+     *   ResourceBundle.getBundle("MyResources", Locale.forLanguageTag("fr-CH"),
      *                            ResourceBundle.Control.getControl(FORMAT_PROPERTIES));
-     * </pre>
+     * }
      *
      * Given the resource bundles in the <a
      * href="./ResourceBundle.html#default_behavior_example">example</a> in
@@ -2443,10 +2446,10 @@ public abstract class ResourceBundle {
      * using {@link Properties#loadFromXML(java.io.InputStream)
      * Properties.loadFromXML}.
      *
-     * <pre>
+     * {@snippet lang=java :
      * ResourceBundle rb = ResourceBundle.getBundle("Messages",
      *     new ResourceBundle.Control() {
-     *         public List&lt;String&gt; getFormats(String baseName) {
+     *         public List<String> getFormats(String baseName) {
      *             if (baseName == null)
      *                 throw new NullPointerException();
      *             return Arrays.asList("xml");
@@ -2491,7 +2494,7 @@ public abstract class ResourceBundle {
      *         }
      *     });
      *
-     * ...
+     * code: // @replace substring="code:" replacement="..."
      *
      * private static class XMLResourceBundle extends ResourceBundle {
      *     private Properties props;
@@ -2502,11 +2505,11 @@ public abstract class ResourceBundle {
      *     protected Object handleGetObject(String key) {
      *         return props.getProperty(key);
      *     }
-     *     public Enumeration&lt;String&gt; getKeys() {
-     *         ...
+     *     public Enumeration<String> getKeys() {
+     *         code: // @replace substring="code:" replacement="..."
      *     }
      * }
-     * </pre>
+     * }
      *
      * @apiNote {@code ResourceBundle.Control} is not supported
      * in named modules. If the {@code ResourceBundle.getBundle} method with
@@ -2515,7 +2518,6 @@ public abstract class ResourceBundle {
      * of {@link ResourceBundleControlProvider} are ignored in named modules.
      *
      * @since 1.6
-     * @revised 9
      * @see java.util.spi.ResourceBundleProvider
      */
     public static class Control {
@@ -2891,7 +2893,7 @@ public abstract class ResourceBundle {
                 if (language.equals("nb") || isNorwegianBokmal) {
                     List<Locale> tmpList = getDefaultList("nb", script, region, variant);
                     // Insert a locale replacing "nb" with "no" for every list entry with precedence
-                    List<Locale> bokmalList = new LinkedList<>();
+                    List<Locale> bokmalList = new ArrayList<>();
                     for (Locale l_nb : tmpList) {
                         var isRoot = l_nb.getLanguage().isEmpty();
                         var l_no = Locale.getInstance(isRoot ? "" : "no",
@@ -2918,15 +2920,8 @@ public abstract class ResourceBundle {
                         // Supply script for users who want to use zh_Hans/zh_Hant
                         // as bundle names (recommended for Java7+)
                         switch (region) {
-                        case "TW":
-                        case "HK":
-                        case "MO":
-                            script = "Hant";
-                            break;
-                        case "CN":
-                        case "SG":
-                            script = "Hans";
-                            break;
+                            case "TW", "HK", "MO" -> script = "Hant";
+                            case "CN", "SG"       -> script = "Hans";
                         }
                     }
                 }
@@ -2938,7 +2933,7 @@ public abstract class ResourceBundle {
                 List<String> variants = null;
 
                 if (!variant.isEmpty()) {
-                    variants = new LinkedList<>();
+                    variants = new ArrayList<>();
                     int idx = variant.length();
                     while (idx != -1) {
                         variants.add(variant.substring(0, idx));
@@ -2946,7 +2941,7 @@ public abstract class ResourceBundle {
                     }
                 }
 
-                List<Locale> list = new LinkedList<>();
+                List<Locale> list = new ArrayList<>();
 
                 if (variants != null) {
                     for (String v : variants) {
@@ -2962,14 +2957,10 @@ public abstract class ResourceBundle {
                     if (language.equals("zh")) {
                         if (region.isEmpty()) {
                             // Supply region(country) for users who still package Chinese
-                            // bundles using old convension.
+                            // bundles using old convention.
                             switch (script) {
-                                case "Hans":
-                                    region = "CN";
-                                    break;
-                                case "Hant":
-                                    region = "TW";
-                                    break;
+                                case "Hans" -> region = "CN";
+                                case "Hant" -> region = "TW";
                             }
                         }
                     }
@@ -3102,6 +3093,12 @@ public abstract class ResourceBundle {
          * nor {@code "java.properties"}, an
          * {@code IllegalArgumentException} is thrown.</li>
          *
+         * <li>If the {@code locale}'s language is one of the
+         * <a href="./Locale.html#legacy_language_codes">Legacy language
+         * codes</a>, either old or new, then repeat the loading process
+         * if needed, with the bundle name with the other language.
+         * For example, "iw" for "he" and vice versa.
+         *
          * </ul>
          *
          * @param baseName
@@ -3146,7 +3143,6 @@ public abstract class ResourceBundle {
          *        if an error occurred when reading resources using
          *        any I/O operations
          * @see java.util.spi.ResourceBundleProvider#getBundle(String, Locale)
-         * @revised 9
          */
         public ResourceBundle newBundle(String baseName, Locale locale, String format,
                                         ClassLoader loader, boolean reload)
@@ -3156,6 +3152,22 @@ public abstract class ResourceBundle {
              * that is visible to the given loader and accessible to the given caller.
              */
             String bundleName = toBundleName(baseName, locale);
+            var bundle = newBundle0(bundleName, format, loader, reload);
+            if (bundle == null) {
+                // Try loading legacy ISO language's other bundles
+                var otherBundleName = Bundles.toOtherBundleName(baseName, bundleName, locale);
+                if (!bundleName.equals(otherBundleName)) {
+                    bundle = newBundle0(otherBundleName, format, loader, reload);
+                }
+            }
+
+            return bundle;
+        }
+
+        @SuppressWarnings("removal")
+        private ResourceBundle newBundle0(String bundleName, String format,
+                    ClassLoader loader, boolean reload)
+                    throws IllegalAccessException, InstantiationException, IOException {
             ResourceBundle bundle = null;
             if (format.equals("java.class")) {
                 try {
@@ -3195,7 +3207,7 @@ public abstract class ResourceBundle {
                         } catch (InvocationTargetException e) {
                             uncheckedThrow(e);
                         } catch (PrivilegedActionException e) {
-                            assert e.getException() instanceof NoSuchMethodException;
+                            assert e.getCause() instanceof NoSuchMethodException;
                             throw new InstantiationException("public no-arg constructor " +
                                 "does not exist in " + bundleClass.getName());
                         }
@@ -3230,7 +3242,7 @@ public abstract class ResourceBundle {
                             }
                         });
                 } catch (PrivilegedActionException e) {
-                    throw (IOException) e.getException();
+                    throw (IOException) e.getCause();
                 }
                 if (stream != null) {
                     try {
@@ -3562,6 +3574,7 @@ public abstract class ResourceBundle {
         /**
          * Returns a new ResourceBundle instance of the given bundleClass
          */
+        @SuppressWarnings("removal")
         static ResourceBundle newResourceBundle(Class<? extends ResourceBundle> bundleClass) {
             try {
                 @SuppressWarnings("unchecked")
@@ -3601,6 +3614,7 @@ public abstract class ResourceBundle {
             String bundleName = Control.INSTANCE.toBundleName(baseName, locale);
             try {
                 PrivilegedAction<Class<?>> pa = () -> Class.forName(module, bundleName);
+                @SuppressWarnings("removal")
                 Class<?> c = AccessController.doPrivileged(pa, null, GET_CLASSLOADER_PERMISSION);
                 trace("local in %s %s caller %s: %s%n", module, bundleName, callerModule, c);
 
@@ -3701,7 +3715,7 @@ public abstract class ResourceBundle {
                 }
             };
 
-            try (InputStream stream = AccessController.doPrivileged(pa)) {
+            try (@SuppressWarnings("removal") InputStream stream = AccessController.doPrivileged(pa)) {
                 if (stream != null) {
                     return new PropertyResourceBundle(stream);
                 } else {
@@ -3719,7 +3733,7 @@ public abstract class ResourceBundle {
 
     }
 
-    private static final boolean TRACE_ON = Boolean.valueOf(
+    private static final boolean TRACE_ON = Boolean.parseBoolean(
         GetPropertyAction.privilegedGetProperty("resource.bundle.debug", "false"));
 
     private static void trace(String format, Object... params) {
