@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -50,7 +50,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import jdk.internal.loader.Resource;
@@ -84,7 +83,7 @@ public final class ModulePatcher {
                 String mn = e.getKey();
                 List<Path> paths = e.getValue().stream()
                         .map(Paths::get)
-                        .collect(Collectors.toList());
+                        .toList();
                 map.put(mn, paths);
             }
             this.map = map;
@@ -132,14 +131,15 @@ public final class ModulePatcher {
 
                     // exploded directory without following sym links
                     Path top = file;
-                    Files.find(top, Integer.MAX_VALUE,
-                               ((path, attrs) -> attrs.isRegularFile()))
-                            .filter(path -> (!isAutomatic
-                                    || path.toString().endsWith(".class"))
-                                    && !isHidden(path))
+                    try (Stream<Path> stream = Files.find(top, Integer.MAX_VALUE,
+                            ((path, attrs) -> attrs.isRegularFile()))) {
+                        stream.filter(path -> (!isAutomatic
+                                      || path.toString().endsWith(".class"))
+                                      && !isHidden(path))
                             .map(path -> toPackageName(top, path))
                             .filter(Checks::isPackageName)
                             .forEach(packages::add);
+                    }
 
                 }
             }
@@ -454,7 +454,9 @@ public final class ModulePatcher {
                 public URL getURL() {
                     String encodedPath = ParseUtil.encodePath(name, false);
                     try {
-                        return new URL("jar:" + csURL + "!/" + encodedPath);
+                        @SuppressWarnings("deprecation")
+                        var result = new URL("jar:" + csURL + "!/" + encodedPath);
+                        return result;
                     } catch (MalformedURLException e) {
                         return null;
                     }
