@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,8 +30,6 @@ import java.io.Reader;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.text.ParseException;
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -42,6 +40,11 @@ import jdk.jfr.internal.jfc.JFC;
 
 /**
  * A collection of settings and metadata describing the configuration.
+ * <p>
+ * The following example shows how the {@code Configuration} class can be used
+ * to list available configurations and how to pass a configuration object to a
+ * {@code Recording}.
+ * {@snippet class = "Snippets" region = "ConfigurationxsOverview"}
  *
  * @since 9
  */
@@ -140,7 +143,7 @@ public final class Configuration {
      * @see java.lang.SecurityManager#checkRead(java.lang.String)
      */
     public static Configuration create(Path path) throws IOException, ParseException {
-        Objects.requireNonNull(path);
+        Objects.requireNonNull(path, "path");
         JVMSupport.ensureWithIOException();
         try (Reader reader = Files.newBufferedReader(path)) {
             return JFC.create(JFC.nameFromPath(path), reader);
@@ -158,7 +161,7 @@ public final class Configuration {
      * @throws ParseException if the file can't be parsed
      */
     public static Configuration create(Reader reader) throws IOException, ParseException {
-        Objects.requireNonNull(reader);
+        Objects.requireNonNull(reader, "reader");
         JVMSupport.ensureWithIOException();
         return JFC.create(null, reader);
     }
@@ -179,6 +182,7 @@ public final class Configuration {
      * @throws ParseException if the configuration file can't be parsed
      */
     public static Configuration getConfiguration(String name) throws IOException, ParseException {
+        Objects.requireNonNull(name, "name");
         JVMSupport.ensureWithIOException();
         return JFC.getPredefined(name);
     }
@@ -190,8 +194,8 @@ public final class Configuration {
      */
     public static List<Configuration> getConfigurations() {
         if (JVMSupport.isNotAvailable()) {
-            return new ArrayList<>();
+            return List.of();
         }
-        return Collections.unmodifiableList(JFC.getConfigurations());
+        return List.copyOf(JFC.getConfigurations());
     }
 }
