@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -43,7 +43,14 @@
  * @comment build test class and indify classes
  * @build vm.mlvm.mixed.stress.java.findDeadlock.INDIFY_Test
  * @run driver vm.mlvm.share.IndifiedClassesBuilder
- *
  * @run main/othervm -Xlog:gc,safepoint vm.mlvm.mixed.stress.java.findDeadlock.INDIFY_Test
+ *
+ * To see code that takes more time to safepoint run with:
+ * main/othervm -XX:+SafepointTimeout -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:+AbortVMOnSafepointTimeout
+ *                   -XX:SafepointTimeoutDelay=500
+ *                   -XX:+PrintSystemDictionaryAtExit
+ *                   -Xlog:gc,safepoint
+ *                   vm.mlvm.mixed.stress.java.findDeadlock.INDIFY_Test
  */
 
