@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -41,9 +41,9 @@ import org.xml.sax.InputSource;
 
 /**
  * @test
- * @bug 8158084 8162438 8162442 8166220 8166398
+ * @bug 8158084 8162438 8162442 8166220 8166398 8290740
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true catalog.CatalogSupport
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow catalog.CatalogSupport
  * @run testng/othervm catalog.CatalogSupport
  * @summary verifies the use of Catalog in SAX/DOM/StAX/Validation/Transform.
  * The two main scenarios for all processors are:
@@ -100,6 +100,17 @@ public class CatalogSupport extends CatalogSupportBase {
     @Test(dataProvider = "data_XIA")
     public void testXIncludeA(boolean setUseCatalog, boolean useCatalog, String catalog,
             String xml, MyHandler handler, String expected) throws Exception {
+        testXInclude(setUseCatalog, useCatalog, catalog, xml, handler, expected);
+    }
+
+    /*
+       Verifies that the Catalog is used when the handler is null. The test shall
+       run through without an Exception (that was thrown before the fix).
+    */
+    @Test(dataProvider = "data_XIA")
+    public void testXIncludeA_NullHandler(boolean setUseCatalog, boolean useCatalog, String catalog,
+            String xml, MyHandler handler, String expected) throws Exception {
+        handler = null;
         testXInclude(setUseCatalog, useCatalog, catalog, xml, handler, expected);
     }
 
