@@ -43,7 +43,7 @@ import org.xml.sax.SAXException;
  * @test
  * @bug 6517717
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true dom.CR6517717Test
+ * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow dom.CR6517717Test
  * @run testng/othervm dom.CR6517717Test
  * @summary Test Node.setPrefix(prefix) shall throw DOMException.NO_MODIFICATION_ALLOWED_ERR if the node is read-only.
  */
