@@ -4,9 +4,7 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.  Oracle designates this
- * particular file as subject to the "Classpath" exception as provided
- * by Oracle in the LICENSE file that accompanied this code.
+ * published by the Free Software Foundation.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -61,8 +59,8 @@ import jdk.test.lib.RandomFactory;
  * @compile dnsprovider/TestDnsProvider.java
  * @run main/othervm LdapDnsProviderTest
  * @run main/othervm LdapDnsProviderTest nosm
- * @run main/othervm LdapDnsProviderTest smnodns
- * @run main/othervm LdapDnsProviderTest smdns
+ * @run main/othervm -Djava.security.manager=allow LdapDnsProviderTest smnodns
+ * @run main/othervm -Djava.security.manager=allow LdapDnsProviderTest smdns
  * @run main/othervm LdapDnsProviderTest nosmbaddns
  */
 
