@@ -1,24 +1,24 @@
 /*
- *  Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
- *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+ * Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
- *  This code is free software; you can redistribute it and/or modify it
- *  under the terms of the GNU General Public License version 2 only, as
- *  published by the Free Software Foundation.
+ * This code is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License version 2 only, as
+ * published by the Free Software Foundation.
  *
- *  This code is distributed in the hope that it will be useful, but WITHOUT
- *  ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
- *  FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
- *  version 2 for more details (a copy is included in the LICENSE file that
- *  accompanied this code).
+ * This code is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ * version 2 for more details (a copy is included in the LICENSE file that
+ * accompanied this code).
  *
- *  You should have received a copy of the GNU General Public License version
- *  2 along with this work; if not, write to the Free Software Foundation,
- *  Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+ * You should have received a copy of the GNU General Public License version
+ * 2 along with this work; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
  *
- *  Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
- *  or visit www.oracle.com if you need additional information or have any
- *  questions.
+ * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
+ * or visit www.oracle.com if you need additional information or have any
+ * questions.
  */
 
 /*
@@ -26,15 +26,10 @@
  * @run testng TestMemoryAlignment
  */
 
-import jdk.incubator.foreign.MemoryLayouts;
-import jdk.incubator.foreign.MemoryLayout;
-
-import jdk.incubator.foreign.GroupLayout;
-import jdk.incubator.foreign.MemoryLayout.PathElement;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.SequenceLayout;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.*;
+import java.lang.foreign.MemoryLayout.PathElement;
 import java.lang.invoke.VarHandle;
+import java.nio.ByteOrder;
 import java.util.stream.LongStream;
 
 import org.testng.annotations.*;
@@ -44,88 +39,94 @@ public class TestMemoryAlignment {
 
     @Test(dataProvider = "alignments")
     public void testAlignedAccess(long align) {
-        ValueLayout layout = MemoryLayouts.BITS_32_BE;
-        assertEquals(layout.bitAlignment(), 32);
-        ValueLayout aligned = layout.withBitAlignment(align);
-        assertEquals(aligned.bitAlignment(), align); //unreasonable alignment here, to make sure access throws
-        VarHandle vh = aligned.varHandle(int.class);
-        try (MemorySegment segment = MemorySegment.allocateNative(aligned)) {
-            vh.set(segment, -42);
-            int val = (int)vh.get(segment);
+        ValueLayout layout = ValueLayout.JAVA_INT
+                .withOrder(ByteOrder.BIG_ENDIAN);
+        assertEquals(layout.byteAlignment(), 4);
+        ValueLayout aligned = layout.withByteAlignment(align);
+        assertEquals(aligned.byteAlignment(), align); //unreasonable alignment here, to make sure access throws
+        VarHandle vh = aligned.varHandle();
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(aligned);;
+            vh.set(segment, 0L, -42);
+            int val = (int)vh.get(segment, 0L);
             assertEquals(val, -42);
         }
     }
 
     @Test(dataProvider = "alignments")
     public void testUnalignedAccess(long align) {
-        ValueLayout layout = MemoryLayouts.BITS_32_BE;
-        assertEquals(layout.bitAlignment(), 32);
-        ValueLayout aligned = layout.withBitAlignment(align);
-        MemoryLayout alignedGroup = MemoryLayout.ofStruct(MemoryLayouts.PAD_8, aligned);
-        assertEquals(alignedGroup.bitAlignment(), align);
-        VarHandle vh = aligned.varHandle(int.class);
-        try (MemorySegment segment = MemorySegment.allocateNative(alignedGroup)) {
-            vh.set(segment.asSlice(1L), -42);
+        ValueLayout layout = ValueLayout.JAVA_INT
+                .withOrder(ByteOrder.BIG_ENDIAN);
+        assertEquals(layout.byteAlignment(), 4);
+        ValueLayout aligned = layout.withByteAlignment(align);
+        try (Arena arena = Arena.ofConfined()) {
+            MemoryLayout alignedGroup = MemoryLayout.structLayout(MemoryLayout.paddingLayout(1), aligned);
+            assertEquals(alignedGroup.byteAlignment(), align);
+            VarHandle vh = aligned.varHandle();
+            MemorySegment segment = arena.allocate(alignedGroup);;
+            vh.set(segment.asSlice(1L), 0L, -42);
             assertEquals(align, 8); //this is the only case where access is aligned
-        } catch (IllegalStateException ex) {
+        } catch (IllegalArgumentException ex) {
             assertNotEquals(align, 8); //if align != 8, access is always unaligned
         }
     }
 
     @Test(dataProvider = "alignments")
     public void testUnalignedPath(long align) {
-        MemoryLayout layout = MemoryLayouts.BITS_32_BE;
-        MemoryLayout aligned = layout.withBitAlignment(align).withName("value");
-        GroupLayout alignedGroup = MemoryLayout.ofStruct(MemoryLayouts.PAD_8, aligned);
+        MemoryLayout layout = ValueLayout.JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN);
+        MemoryLayout aligned = layout.withByteAlignment(align).withName("value");
         try {
-            alignedGroup.varHandle(int.class, PathElement.groupElement("value"));
-            assertEquals(align, 8); //this is the only case where path is aligned
-        } catch (UnsupportedOperationException ex) {
-            assertNotEquals(align, 8); //if align != 8, path is always unaligned
+            GroupLayout alignedGroup = MemoryLayout.structLayout(MemoryLayout.paddingLayout(1), aligned);
+            alignedGroup.varHandle(PathElement.groupElement("value"));
+            assertEquals(align, 1); //this is the only case where path is aligned
+        } catch (IllegalArgumentException ex) {
+            assertNotEquals(align, 1); //if align != 8, path is always unaligned
         }
     }
 
     @Test(dataProvider = "alignments")
     public void testUnalignedSequence(long align) {
-        SequenceLayout layout = MemoryLayout.ofSequence(5, MemoryLayouts.BITS_32_BE.withBitAlignment(align));
         try {
-            VarHandle vh = layout.varHandle(int.class, PathElement.sequenceElement());
-            try (MemorySegment segment = MemorySegment.allocateNative(layout)) {
+            SequenceLayout layout = MemoryLayout.sequenceLayout(5, ValueLayout.JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN).withByteAlignment(align));
+            VarHandle vh = layout.varHandle(PathElement.sequenceElement());
+            try (Arena arena = Arena.ofConfined()) {
+                MemorySegment segment = arena.allocate(layout);;
                 for (long i = 0 ; i < 5 ; i++) {
-                    vh.set(segment, i, -42);
+                    vh.set(segment, 0L, i, -42);
                 }
             }
-        } catch (UnsupportedOperationException ex) {
-            assertTrue(align > 32); //if align > 32, access is always unaligned (for some elements)
+        } catch (IllegalArgumentException ex) {
+            assertTrue(align > 4); //if align > 4, access is always unaligned (for some elements)
         }
     }
 
     @Test
     public void testPackedAccess() {
-        ValueLayout vChar = MemoryLayouts.BITS_8_BE;
-        ValueLayout vShort = MemoryLayouts.BITS_16_BE;
-        ValueLayout vInt = MemoryLayouts.BITS_32_BE;
+        ValueLayout vChar = ValueLayout.JAVA_BYTE;
+        ValueLayout vShort = ValueLayout.JAVA_SHORT.withOrder(ByteOrder.BIG_ENDIAN);
+        ValueLayout vInt = ValueLayout.JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN);
         //mimic pragma pack(1)
-        GroupLayout g = MemoryLayout.ofStruct(vChar.withBitAlignment(8).withName("a"),
-                               vShort.withBitAlignment(8).withName("b"),
-                               vInt.withBitAlignment(8).withName("c"));
-        assertEquals(g.bitAlignment(), 8);
-        VarHandle vh_c = g.varHandle(byte.class, PathElement.groupElement("a"));
-        VarHandle vh_s = g.varHandle(short.class, PathElement.groupElement("b"));
-        VarHandle vh_i = g.varHandle(int.class, PathElement.groupElement("c"));
-        try (MemorySegment segment = MemorySegment.allocateNative(g)) {
-            vh_c.set(segment, Byte.MIN_VALUE);
-            assertEquals(vh_c.get(segment), Byte.MIN_VALUE);
-            vh_s.set(segment, Short.MIN_VALUE);
-            assertEquals(vh_s.get(segment), Short.MIN_VALUE);
-            vh_i.set(segment, Integer.MIN_VALUE);
-            assertEquals(vh_i.get(segment), Integer.MIN_VALUE);
+        GroupLayout g = MemoryLayout.structLayout(vChar.withByteAlignment(1).withName("a"),
+                               vShort.withByteAlignment(1).withName("b"),
+                               vInt.withByteAlignment(1).withName("c"));
+        assertEquals(g.byteAlignment(), 1);
+        VarHandle vh_c = g.varHandle(PathElement.groupElement("a"));
+        VarHandle vh_s = g.varHandle(PathElement.groupElement("b"));
+        VarHandle vh_i = g.varHandle(PathElement.groupElement("c"));
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(g);;
+            vh_c.set(segment, 0L, Byte.MIN_VALUE);
+            assertEquals(vh_c.get(segment, 0L), Byte.MIN_VALUE);
+            vh_s.set(segment, 0L, Short.MIN_VALUE);
+            assertEquals(vh_s.get(segment, 0L), Short.MIN_VALUE);
+            vh_i.set(segment, 0L, Integer.MIN_VALUE);
+            assertEquals(vh_i.get(segment, 0L), Integer.MIN_VALUE);
         }
     }
 
     @DataProvider(name = "alignments")
     public Object[][] createAlignments() {
-        return LongStream.range(3, 32)
+        return LongStream.range(1, 20)
                 .mapToObj(v -> new Object[] { 1L << v })
                 .toArray(Object[][]::new);
     }
