@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,7 @@
  * @bug     4530538
  * @summary Basic unit test of MemoryMXBean.getMemoryPools() and
  *          MemoryMXBean.getMemoryManager().
- * @requires vm.gc != "Z"
+ * @requires vm.gc != "Z" & vm.gc != "Shenandoah" & !vm.gc.G1
  * @author  Mandy Chung
  *
  * @modules jdk.management
@@ -34,15 +34,51 @@
  */
 
 /*
+ * @test id=ZSinglegen
+ * @bug     4530538
+ * @summary Basic unit test of MemoryMXBean.getMemoryPools() and
+ *          MemoryMXBean.getMemoryManager().
+ * @requires vm.gc.ZSinglegen
+ * @author  Mandy Chung
+ *
+ * @modules jdk.management
+ * @run main/othervm -XX:+UseZGC -XX:-ZGenerational MemoryTest 2 1
+ */
+
+/*
+ * @test id=ZGenerational
+ * @bug     4530538
+ * @summary Basic unit test of MemoryMXBean.getMemoryPools() and
+ *          MemoryMXBean.getMemoryManager().
+ * @requires vm.gc.ZGenerational
+ * @author  Mandy Chung
+ *
+ * @modules jdk.management
+ * @run main/othervm -XX:+UseZGC -XX:+ZGenerational MemoryTest 4 2
+ */
+
+/*
  * @test
  * @bug     4530538
  * @summary Basic unit test of MemoryMXBean.getMemoryPools() and
  *          MemoryMXBean.getMemoryManager().
- * @requires vm.gc == "Z"
+ * @requires vm.gc == "Shenandoah"
  * @author  Mandy Chung
  *
  * @modules jdk.management
- * @run main MemoryTest 1 1
+ * @run main MemoryTest 2 1
+ */
+
+/*
+ * @test
+ * @bug     4530538
+ * @summary Basic unit test of MemoryMXBean.getMemoryPools() and
+ *          MemoryMXBean.getMemoryManager().
+ * @requires vm.gc.G1
+ * @author  Mandy Chung
+ *
+ * @modules jdk.management
+ * @run main/othervm -XX:+UseG1GC MemoryTest 3 3
  */
 
 /*
